feat: modify project worktree

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,13 @@
-[package]
-name = "boo"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+members = ["boo-core", "boo"]
+resolver = "2"
 
-[lib]
-crate-type = ["cdylib"]
-
-[dependencies]
-nvim-oxi = { version = "0.5.1", features = ["neovim-0-10", "mlua"] }
+[workspace.dependencies]
+boo-core = { path = "./boo-core" }
+nvim-oxi = { version = "0.5.1", features = [
+  "mlua",
+  "libuv",
+  "neovim-nightly",
+  "neovim-0-10",
+  "neovim-0-9",
+] }
